[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/NotoSansJP-Regular_14.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/NotoSansJP-Regular_12.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui/skill_tooltip/SkillTooltip.gd" type="Script" id=3]

[node name="SkillTooltip" type="PanelContainer"]
margin_top = 40.0
margin_right = 46.0
margin_bottom = 142.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 39.0
margin_bottom = 115.0

[node name="SkillNameContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 32.0
margin_bottom = 36.0

[node name="SkillName" type="Label" parent="VBoxContainer/SkillNameContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 25.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1

[node name="SkillDescriptionContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 32.0
margin_bottom = 72.0

[node name="SkillDescription" type="Label" parent="VBoxContainer/SkillDescriptionContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 25.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
valign = 1

[node name="SkillCostContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 32.0
margin_bottom = 90.0

[node name="SkillCost" type="HBoxContainer" parent="VBoxContainer/SkillCostContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 25.0
margin_bottom = 7.0
size_flags_horizontal = 3
alignment = 1

[node name="name" type="VBoxContainer" parent="VBoxContainer/SkillCostContainer/SkillCost"]
margin_right = 9.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="template" type="Label" parent="VBoxContainer/SkillCostContainer/SkillCost/name"]
visible = false
margin_right = 14.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
valign = 1

[node name="value" type="VBoxContainer" parent="VBoxContainer/SkillCostContainer/SkillCost"]
margin_left = 13.0
margin_right = 18.0
size_flags_horizontal = 3

[node name="template" type="Label" parent="VBoxContainer/SkillCostContainer/SkillCost/value"]
visible = false
margin_right = 14.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 1

[node name="SkillParamsContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 32.0
margin_bottom = 108.0

[node name="SkillParams" type="HBoxContainer" parent="VBoxContainer/SkillParamsContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 25.0
margin_bottom = 7.0
size_flags_horizontal = 3
alignment = 1

[node name="name" type="VBoxContainer" parent="VBoxContainer/SkillParamsContainer/SkillParams"]
margin_right = 9.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="template" type="Label" parent="VBoxContainer/SkillParamsContainer/SkillParams/name"]
visible = false
margin_right = 14.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
valign = 1

[node name="value" type="VBoxContainer" parent="VBoxContainer/SkillParamsContainer/SkillParams"]
margin_left = 13.0
margin_right = 18.0
size_flags_horizontal = 3

[node name="template" type="Label" parent="VBoxContainer/SkillParamsContainer/SkillParams/value"]
visible = false
margin_right = 14.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 1

[connection signal="sort_children" from="VBoxContainer" to="." method="_on_VBoxContainer_sort_children"]
